# IB-class-code-examples

./: .gitignore  Coding-Standards.md  README.md
Classes/: Matrix.cc  arithmetic_over_friend.cc  basura.txt  calculator.cc  change_2.cc  change_3.cc  class-definition.cc  class-example.cc  const-member-functions.cc  constructor-example.cc  constructor.cc  constructor_initializations.cc  copy-constructor.cc  copy_constructor.cc  custom-operator.cc  custom_operator.cc  date_class.cc  date_struct.cc  default_constructor.cc  default_constructor2.cc  destructor-example.cc  destructor_example.cc  employee_class.cc  fibonacci_class.cc  friend_function_example.cc  getters-setters.cc  implicit_constructor.cc  initializations.cc  initializer-list.cc  initializer_list.cc  instance-creation.cc  instance_creation.cc  int_array_class-bad.cc  int_array_class-good.cc  list_initialization.cc  move-constructor.cc  move-copy-operators.cc  move-error.cc  move_example.cc  operator-overloading-array10.cc  (+27 more)
Functions/: Makefile  Manolito.txt  Sample.txt  assert-example.cc  assert-example1.cc  assert-example2.cc  bad-function-example.cc  basic-io.cc  basura  basura.cc  check-correct-parameters.cc  command-line-parameters.cc  crear-Manolito  dangling_reference.cc  declaration-definition-header.cc  default-arguments.cc  exit_example.cc  f2-compare.cc  file_append.cc  file_input.cc  file_output.cc  function-overloading.cc  good-function-example.cc  input.txt  manipulators.cc  miPrograma  min.cc  n4-leap.cc  namespace-example.cc  namespace-example2.cc  namespace-example2.cc.sec  namespace-using-what-you-need.cc  namespace-using.cc  out.txt  parameter-passing.cc  parameter-passing1.cc  parameters-arguments.cc  probatina.cc  random_numbers.cc  reading-data-from-stdcin.cc  (+19 more)
GoogleTests/: CMakeLists.txt  LEE_ME.txt  sqrt.cc  sqrt_test.cc  tests.cc  whattotest.cc
GoogleTests/tutorial-bogotobogo-NO/: CMakeLists.txt  LEE_ME.txt  simplemath.cc  unittest_SimpleMath.cc
GoogleTests/tutorial-codeproject-OK/: CMakeLists.txt  LEE_ME.txt
GoogleTests/tutorial-codeproject-OK/src/: factorial.cc  main_factorial.cc
GoogleTests/tutorial-codeproject-OK/test/: gtest_main.cc  test_factorial.cc
GoogleTests/tutorial-google-cpp-test-framework/: CMakeLists.txt  LEE_ME.txt  sqrt.cpp  sqrt_test.cpp
GoogleTests/tutorial-ibm-NO/: func.h  test.cc
GoogleTests/tutorial-raymii-NO/: LEE_ME.txt
GoogleTests/tutorial-raymii-NO/ExampleProject/: CMakeLists.txt
GoogleTests/tutorial-raymii-NO/ExampleProject/src/: CMakeLists.txt  Formula.cpp  main.cpp
GoogleTests/tutorial-raymii-NO/ExampleProject/tst/: CMakeLists.txt  Formula-test.cpp
GoogleTests/tutorial-ubuntu/: CMakeLists.txt  LEE_ME.txt  tests.cc  whattotest.cc
GoogleTests/tutorial-yolinux-NO/src/: Addition.cpp  ExampleApp.cpp  Makefile  Multiply.cpp  Multiply.h
GoogleTests/tutorial-yolinux-NO/test/src/: Addition_Test.cpp  Main_TestAll.cpp  Makefile  Multiply_Test.cpp
IntroductionToC++/: 10_divisors.cc  11_fibonacci.cc  19_arguments.cc  5_media.cc  8_time.cc  9_pow.cc  Makefile  Makefile.4  break-continue-statements.cc  centimeters_to_inches.cc  circle_area.cc  const_with_references.cc  even_or_odd.cc  expresions.cc  floating-point-arithmetics.cc  for-each-loops.cc  for_loop.cc  hello-asm.c  hello.c  hello_world.cc  hello_world.cpp  hellofunc.c  hellomake.c  hellomake.h  hypotenuse.cc  if_statement.cc  iostream_example.cc  minimo_vector.cc  operators.cc  optimize_vector_resizing.cc  optimize_vector_resizing.cpp  pointer_example.cc  pre-post_increment.cc  range_for.cc  reference_example.cc  secuencia.txt  short-circuit.cc  sizeof  sizeof.cc  static_cast.cc  (+7 more)
T1-Linux/: Alfabetos1.tex  Alfabetos2.tex  Alfabetos3.tex  Alfabetos_ejemplos.tex  Cierres.tex  Cierres2.tex  Complementario.tex  Concatenacion.tex  Concatenacion_lenguajes.tex  Distributividad.tex  Igualdad.tex  Inversa.tex  Inverso_lenguaje.tex  Lenguajes1.tex  Lenguajes2.tex  Makefile  Potencia.tex  Potencia_lenguaje.tex  Propiedades.tex  Subcadena.tex  Subsecuencia.tex  Sufijos_prefijos.tex  T0_Conceptos_Basicos.tex  Teoremas.tex  Teoremas2.tex  Union_interseccion.tex  Universal.tex  good-bye.txt  listado.txt  tr.tex
Tools/GoogleTests/: CMakeLists.txt  LEE_ME.txt
Tools/GoogleTests/src/: addition.cc  addition.h  b  cubic.cc  cubic.h  date.cc  date.h  factorial.cc  factorial.h  formula.cc  formula.h  main_program.cc  multiply.cc  multiply.h  sample2.cc  sample2.h  square_root.cc  square_root.h
Tools/GoogleTests/test/: sample2_unittest.cc  test_addition.cc  test_cubic.cc  test_date.cc  test_factorial.cc  test_formula.cc  test_multiply.cc  test_square_root.cc
Tools/cmake/CMakeTutorial-simple/: CMakeLists.txt  LEE_ME.txt
Tools/cmake/CMakeTutorial-simple/src/: Makefile  fibonacci_main.cc  fibonacci_sum.cc  fibonacci_sum.h  tools.cc  tools.h
Tools/cmake/sample_project/: CMakeLists.txt  README.md
Tools/cmake/sample_project/src/: tools.cc  tools_main.cc
Tools/timer_class/: CMakeLists.txt
Tools/timer_class/src/: Makefile  another_code.cc  timer.cc  timer.h  timer_program.cc  utils.cc  utils.h
Tools/timer_class/test/: gtest_main.cc  test_timer.cc
classes/: Makefile  calculator.cc  change_1.cc  change_2.cc  change_3.cc  class_definition.cc  const_member_functions.cc  constructor.cc  constructor_initializations.cc  date_class.cc  date_struct.cc  default_constructor1.cc  default_constructor2.cc  destructor_example.cc  destructor_example1.cc  destructor_example2  destructor_example2.cc  employee_class.cc  fibonacci_class.cc  friend_function_example.cc  getters_setters.cc  initializer_list.cc  instance_creation.cc  int_array_class-bad.cc  int_array_class-good.cc  member_initializers.cc  move_constructor.cc  move_error.cc  point_output_print.cc  prueba-complejos.cc  static_local_variable.cc  static_member_function.cc  static_members.cc  static_members_utility.cc  stl_objects.cc  struct_example.cc  this_example1.cc  this_example2.cc  this_example3.cc  type_member.cc  (+2 more)
docs/: README.md
experiments/: program-test.cc
img/: README.md
object_relationship/: Makefile  access_specifiers.cc  adding_functionality.cc  (+10 more)
(+297 files in other folders)
